suggestions z-index fixed

--- a/components/Searchbar/searchbar.module.scss
+++ b/components/Searchbar/searchbar.module.scss
@@ -8,6 +8,7 @@
   align-items: center;
   width: 95%;
   max-width: 500px;
+  z-index: 20;
 }
 
 .withSuggestions {
